{
  "version": 4,
  "terraform_version": "1.15.5",
  "serial": 36,
  "lineage": "cb991489-2178-895f-6dca-3141b87a40b0",
  "resources": [
    {
      "mode": "data",
      "type": "aws_subnet",
      "name": "public_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:747082607185:subnet/subnet-0182353d8b564e58e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-3a",
            "availability_zone_id": "euw3-az1",
            "available_ip_address_count": 120,
            "cidr_block": "172.31.107.0/25",
            "default_for_az": false,
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0182353d8b564e58e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "747082607185",
            "private_dns_hostname_type_on_launch": "ip-name",
            "state": "available",
            "tags": {
              "Name": "td2-7-claire-david-public"
            },
            "vpc_id": "vpc-0ebcdb39f7a526ef9"
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "data",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:747082607185:vpc/vpc-0ebcdb39f7a526ef9",
            "cidr_block": "172.31.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-0454b370dce673b8a",
                "cidr_block": "172.31.0.0/16",
                "state": "associated"
              }
            ],
            "default": true,
            "dhcp_options_id": "dopt-077ccd885fa3e78cb",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0ebcdb39f7a526ef9",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0df24612ba1dfc6e7",
            "owner_id": "747082607185",
            "tags": {
              "Name": "vpc-AnaDeArmas"
            }
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "bastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-05dfcc4b49790367c",
            "arn": "arn:aws:ec2:eu-west-3:747082607185:instance/i-0f6012556a9b29b6e",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-3a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0f6012556a9b29b6e",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "td2-99-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0b9cadf74c48bb789",
            "private_dns": "ip-172-31-107-13.eu-west-3.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.107.13",
            "public_dns": "ec2-13-38-113-50.eu-west-3.compute.amazonaws.com",
            "public_ip": "13.38.113.50",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0b78a0f641782b372",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "td2-99-sg-bastion"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0182353d8b564e58e",
            "tags": {
              "Name": "td2-99-bastion"
            },
            "tags_all": {
              "Name": "td2-99-bastion"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-06e90542d21004f64"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.bastion",
            "data.aws_ami.al2023",
            "data.aws_subnet.public_a",
            "data.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "sonde",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0e5759a9cfad804b6",
            "arn": "arn:aws:ec2:eu-west-3:747082607185:instance/i-0f69cae0fc5efbc42",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-3a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0f69cae0fc5efbc42",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "td2-99-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-03c8f3428caa3f017",
            "private_dns": "ip-172-31-107-11.eu-west-3.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.107.11",
            "public_dns": "ec2-15-237-209-5.eu-west-3.compute.amazonaws.com",
            "public_ip": "15.237.209.5",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-030b1b32e5b6e8d02",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "td2-99-sg-sonde"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0182353d8b564e58e",
            "tags": {
              "Name": "td2-99-sonde"
            },
            "tags_all": {
              "Name": "td2-99-sonde"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-011fe719295ed818e"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.bastion",
            "aws_security_group.sonde",
            "data.aws_ami.ubuntu",
            "data.aws_subnet.public_a",
            "data.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "bastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:747082607185:security-group/sg-06e90542d21004f64",
            "description": "SSH depuis mon IP uniquement",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-06e90542d21004f64",
            "ingress": [
              {
                "cidr_blocks": [
                  "82.96.161.255/32"
                ],
                "description": "SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "td2-99-sg-bastion",
            "name_prefix": "",
            "owner_id": "747082607185",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "td2-99-sg-bastion"
            },
            "tags_all": {
              "Name": "td2-99-sg-bastion"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ebcdb39f7a526ef9"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sonde",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:747082607185:security-group/sg-011fe719295ed818e",
            "description": "SSH et ICMP depuis le bastion uniquement",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-011fe719295ed818e",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "ICMP depuis le bastion",
                "from_port": -1,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "icmp",
                "security_groups": [
                  "sg-06e90542d21004f64"
                ],
                "self": false,
                "to_port": -1
              },
              {
                "cidr_blocks": [],
                "description": "SSH depuis le bastion",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-06e90542d21004f64"
                ],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "td2-99-sg-sonde",
            "name_prefix": "",
            "owner_id": "747082607185",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "td2-99-sg-sonde"
            },
            "tags_all": {
              "Name": "td2-99-sg-sonde"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ebcdb39f7a526ef9"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.bastion",
            "data.aws_vpc.main"
          ]
        }
      ]
    }
  ]
}